fix share icon sizing and alignment

--- a/style.css
+++ b/style.css
@@ -140,7 +140,6 @@ h2 {
   display: grid;
   background-color: white;
   border-radius: 16px;
-  /* gap: 8px; */
   margin: 16px;
   box-shadow: 9px 3px 7px 2px rgba(0, 0, 0, 1);
 }
@@ -250,10 +249,6 @@ input {
   padding-bottom: 1rem;
 }
 
-.actions > img {
-  width: 30px;
-}
-
 button {
   cursor: pointer;
 }
@@ -294,4 +289,14 @@ a:link {
 
 .userInfo > p:hover {
   transform: scale(1.2);
+}
+
+.actions > img {
+  height: 30px;
+  align-self: end;
+}
+
+.actions > a {
+  display: grid;
+  align-self: end;
 }
